third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/access_control/generic.exp
processed 5 tasks

task 0 'publish'. lines 1-21:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ TEMPFILE:5:41
  │
5 │         move_to(s, R<bool>{value: true});
  │                                         ^



task 2 'run'. lines 25-25:
return values: true

task 3 'run'. lines 27-27:
return values: true

task 4 'run'. lines 29-29:
Error: Function execution failed with VMError: {
    message: not allowed to perform `reads 0x42::test::R<bool>(@0x1)`,
    major_status: ACCESS_DENIED,
    sub_status: None,
    location: 0x42::test,
    indices: [],
    offsets: [(FunctionDefinitionIndex(1), 1)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
